--- a/curso-angular-matheus-battisti/curso-angular/src/app/app.component.html
+++ b/curso-angular-matheus-battisti/curso-angular/src/app/app.component.html
@@ -1,1 +1,11 @@
 <h1>Hello World!</h1>
+<h2>Testando H2</h2>
+<p>Alguma coisa</p>
+<div>
+  <a href="#">Clique Aqui!</a>
+</div>
+<app-first-component></app-first-component>
+<app-parent-data [name]="userName" [userData]="userData"></app-parent-data>
+<app-directives></app-directives>
+<app-if-render></app-if-render>
+<app-eventos></app-eventos>
