--- a/curso-angular-matheus-battisti/projeto-fe/moments/src/app/components/moment-form/moment-form.component.html
+++ b/curso-angular-matheus-battisti/projeto-fe/moments/src/app/components/moment-form/moment-form.component.html
@@ -1,15 +1,34 @@
-<form>
+<form (ngSubmit)="submit()" [formGroup]="momentForm">
   <div class="form-group">
     <label for="title">Título:</label>
-    <input type="text" placeholder="Coloque um título" required />
+    <input
+      type="text"
+      placeholder="Coloque um título"
+      formControlName="title"
+      required
+    />
+    <div *ngIf="!formValid" class="validation-error">
+      <p *ngIf="momentForm.hasError('required', 'title')">
+        O título é obrigatóro
+      </p>
+    </div>
   </div>
   <div class="form-group">
     <label for="description">Descrição:</label>
-    <textarea placeholder="O que aconteceu lá?" required></textarea>
+    <textarea
+      formControlName="description"
+      placeholder="O que aconteceu lá?"
+      required
+    ></textarea>
+    <div *ngIf="!formValid" class="validation-error">
+      <p *ngIf="momentForm.hasError('required', 'description')">
+        A descrição é obrigatóro
+      </p>
+    </div>
   </div>
   <div class="form-group">
     <label for="image">Coloque a foto que mais marcou:</label>
-    <input type="file" />
+    <input type="file" (change)="onFileSelected($event)" />
   </div>
   <input type="submit" value="{{ btnText }}" />
 </form>
